--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>Frontend Mentor | [Challenge Name Here]</title>
+		<title>Frontend Mentor | Testimonials grid section</title>
 		<link rel="stylesheet" href="./css/normalize.css" />
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
